option java_outer_classname = "LCQueryAreaInfoRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.regular";

import "core/proto/common/java/PlatformResponseResult.proto";
import "core/proto/dataaccess/common/java/AreaInfo.proto";

message QueryAreaInfoRes{
	required	int32					serialNumber		=1;
	required	PlatformResponseResult	results				=2;
	repeated	AreaInfo				infos				=3;
}